--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1809,7 +1809,7 @@ background-color: #e8fbff!important;
   width: 450px;overflow:auto;
 }
 .item{
-  width: 300%;
+  /* width: 300%; */
   margin:0px;
 }
 /*  */
