--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -291,7 +291,7 @@
 
 
               <div class="container_zoom cursor-move" id="items-container">
-                <div class="item">
+                <div class="item js-item">
                   <img src="https://pbgorski.webo.design/pl/wp-content/uploads/sites/3/2024/01/Karty%20lokali%20Sukiennicza_2023_12_21_P1A01.jpg" alt="">
                 </div>
               </div>
