--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -108,10 +108,11 @@ h4 {
 .single-mieszkania .wp-block-post-featured-image img,
 .single-lokale .wp-block-post-featured-image img {
   width: 100%!important;
-  height: 100%!important;
+  height: auto !important;
+  max-height: 800px;
   margin-top: 250px;
   object-fit: contain!important;
-  padding-right: 50px;
+  object-position: left;
   /* margin-left: auto;
   margin-right: auto; */
 }
@@ -1225,6 +1226,10 @@ html body .modula .modula-items .modula-item .modula-item-content>a.modula-item-
     position: static !important;
     margin: 20px auto;
   }
+}
+
+.featured_img_popup_container img{
+  height: auto !important;
 }
 
 .single .entry-content h4{
