--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -7,21 +7,24 @@
     <!-- wp:group -->
     <div id="Page content" class="wp-block-group page-content-wrapper relative">
       <!-- wp:group -->
-      <div id="items-container" class="featured_img_popup_container container_zoom js-featured_img_popup_container opacity-0 flex items-center lg:items-start justify-center w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)] z-[-1] transition ease duration-75">
-
-
+      <div id="items-container" class="featured_img_popup_container container_zoom js-featured_img_popup_container opacity-0 w-full h-full fixed top-0 left-0 bg-[rgba(0,0,0,0.8)] z-[-1] overflow-auto transition ease duration-75">
         <!-- wp:group -->
         <div class="wp-block-group js-close-popup-featured-image text-white fixed top-[20px] right-[20px] text-[36px] cursor-pointer opacity-[0.7] hover:opacity-[1] transition ease duration-200">&#x2715;</div>
         <!-- /wp:group -->
 
-        <!-- wp:image -->
-        <figure class="wp-block-image js-featured-img-popup item js-item transition ease duration-200 flex items-center justify-center my-5">
-          <img
-            src=""
-            alt="popup-image"
-          />
-        </figure>
-        <!-- /wp:image -->
+        <!-- wp:group -->
+        <div class="w-full min-h-full flex items-center justify-center">
+
+          <!-- wp:image -->
+          <figure class="wp-block-image js-featured-img-popup item js-item transition ease duration-200 !block my-5">
+            <img
+              src=""
+              alt="popup-image"
+            />
+          </figure>
+          <!-- /wp:image -->
+        </div>
+        <!-- /wp:group -->
       </div>
       <!-- /wp:group -->
 
